--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ enum34~=1.1
 future~=0.18
 pykeops~=1.5
 geomloss~=0.2
+warmup-scheduler~=0.3
 -f https://download.pytorch.org/whl/cu100/torch_stable.html
 torch==1.1.0
 torchvision==0.3.0
